--- a/css/style.css
+++ b/css/style.css
@@ -153,3 +153,100 @@ width: 50vw;
 height: 50vh;
 margin-left: 10%;
 }
+
+
+.contenerCard{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cards{
+    display: flex;
+    overflow-x: scroll;
+    padding: 1% 0 1% 0;
+    /* scroll-snap-type: x mandatory; */
+    width: 80vw;
+}
+
+.card {
+  width: 300px;
+  height: 400px;
+  border-radius: 40px;
+  /* margin: 0 1vw 3vh 1vw; */
+  flex: 1 0 auto;
+    margin-left: 2%;
+    /* scroll-snap-align: start; */
+        position: relative;
+        
+}
+.card:hover .card-background {
+    transform: scale(1.02) translateZ(0);
+  }
+  
+  
+  .cards:hover > .card:not(:hover) .card-background {
+    filter: brightness(0.7) saturate(0) contrast(1.2) blur(5px);
+  }
+
+    .card-background {
+        background-size: cover;
+        background-position: center;
+        border-radius: 12px;
+        filter: brightness(0.7) saturate(1.5) contrast(0.9); /* A MODIFIER!!!!!! */ 
+        position: absolute; /* image de fond prend toute la place de la cards (avec les 4 lignes du dessous)*/
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        transform-origin: center;
+        transition: .2s;
+      }
+
+::-webkit-scrollbar {
+    width: 100px;
+        background-color: #b46868;
+  } /* the new scrollbar will have a flat appearance with the set background color */
+
+  ::-webkit-scrollbar-thumb {
+        background-color: rgba(0, 0, 0, 0.2); 
+  } /* this will style the thumb, ignoring the track */
+
+  ::-webkit-scrollbar-button {
+        background-color: #7c2929;
+  } /* optionally, you can style the top and the bottom buttons (left and right for horizontal bars) */
+
+  ::-webkit-scrollbar-corner {
+        background-color: black;
+  }
+
+.card .ville {
+    position: relative;
+  padding: 3vh 0 0 1vw;
+  color: white;
+  z-index: 5;
+}
+
+.card:hover .ville {
+  color: white;
+}
+    
+.card .monument {
+    position: relative;
+    padding: 1vh 0 0 1vw;
+    color: black;
+    z-index: 100;
+  }
+
+  .card:hover .monument {
+    color: white;
+  }
+   
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5vh;
+    height: 10vh;
+    background: #4062BB;
+}
