--- a/css/style.css
+++ b/css/style.css
@@ -4,54 +4,310 @@
 }
 
 body{
-height: 100vh;
-display: flex;
-    justify-content: center;
-    align-items: center;
-    vertical-align: middle;
+    background-color:#f4f4f9;
+    overflow-x: hidden;
 }
 
-#blocConnexion{
+header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+section{
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+}
+
+a{
+    color: #4062BB;
+}
+
+#logoTypo{
+    top: 2%;
+    left: 1%;
+    position: absolute;
+    font-size: 50px;
+    color: #f4f4f9;
+}
+#banner img{
+    width: 100vw;
+}
+
+h1{
+    font: 36px "Open Sans";
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+    display: flex;
+    justify-self: center;
+    align-self:center;
+}
+
+#searchBarre{
+    display: flex;
+    top: 2%;
+    justify-content: flex-end;
+    align-items: center;
+    position: absolute;
+    border: 2px solid #f4f4f9;
+    width: 20vw;
+    height: 5vh;
+    border-radius: 50px;
+}
+
+#searchBarre p{
+    padding-right: 35%;
+    color: #f4f4f9;
+}
+
+#research{
+    right: 0;
+    width: 3vw;
+    height: 5vh;
+    border-radius: 0px 50px 50px 0px;
+    border: 2px solid #f4f4f9;
+}
+
+
+
+.positionPresentation{
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#boxGauche{
-    position: absolute;
-    width: 926px;
-    height: 864px;
-    background-color: aqua;
-    box-shadow: -5px 8px 20px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 30px 0px 0px 30px;
+#boxinfo{
+      width: 60vw;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
-#boxDroite{
+.info{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    position: absolute;
-    width: 1058px;
-    height: 864px;
+    justify-content: center;
+    align-items: center;
+    margin: 1%;
+    width:200px;
+    height:200px;
     background: #4062BB;
-    box-shadow: 5px 8px 20px 10px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.25);
     border-radius: 30px;
 }
 
-#coordonnees{
+.info p{
+    font: 18px "Montserrat light";
+    text-align: center;
+    color: white;
+    font-size: 18px;
+    padding: 3%;
+}
 
-    height: 40%;
+hr{
+    border: 1px solid #4062BB;
+    margin-top: 10vh;
+    margin-bottom: 5vh;
+    width: 80vw;
+}
+
+/* #trouverLieux{
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
+} */
+
+#recherche{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80vw;
+    margin: 5vh 0 5vh 0;
+}
+
+#boutonRecherche{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #4062BB;
+    height: 150px;
+    width: 150px;
+    border-radius: 100%;
+}
+
+#boutonRecherche p{
+    text-align: center;
+    color: #f4f4f9;
+}
+
+#maCarte{
+    border-radius: 30px;
+position: relative;
+display: flex;
+width: 50vw;
+height: 50vh;
+margin-left: 10%;
+}
+
+
+.contenerCard{
+    display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#titleLien{
-    width: 60%;
-    height: 1   0%;
-    padding: 10%;
+.cards{
     display: flex;
-    justify-content : space-between;
+    overflow-x: scroll;
+    padding: 1% 0 1% 0;
+    /* scroll-snap-type: x mandatory; */
+    width: 80vw;
+}
+
+.card {
+  width: 300px;
+  height: 400px;
+  border-radius: 40px;
+  /* margin: 0 1vw 3vh 1vw; */
+  flex: 1 0 auto;
+    margin-left: 2%;
+    /* scroll-snap-align: start; */
+        position: relative;
+        
+}
+.card:hover .card-background {
+    transform: scale(1.02) translateZ(0);
+  }
+  
+  
+  .cards:hover > .card:not(:hover) .card-background {
+    filter: brightness(0.7) saturate(0) contrast(1.2) blur(5px);
+  }
+
+    .card-background {
+        background-size: cover;
+        background-position: center;
+        border-radius: 12px;
+        filter: brightness(0.7) saturate(1.5) contrast(0.9); /* A MODIFIER!!!!!! */ 
+        position: absolute; /* image de fond prend toute la place de la cards (avec les 4 lignes du dessous)*/
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        transform-origin: center;
+        transition: .2s;
+      }
+
+.card .ville {
+    position: relative;
+  padding: 3vh 0 0 1vw;
+  color: white;
+  z-index: 5;
+}
+
+.card:hover .ville {
+  color: white;
+}
+    
+.card .monument {
+    position: relative;
+    padding: 1vh 0 0 1vw;
+    color: black;
+    z-index: 100;
+  }
+
+  .card:hover .monument {
+    color: white;
+  }
+   
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5vh;
+    height: 10vh;
+    background: #4062BB;
+}
+
+/* PAGE SERVICES.PHP -------------------------------------------------*/
+
+#banniere-image{
+    width: 100%;
+}
+
+#titre-du-site a{
+    position: absolute;
+    top: 0%;
+    left: 1em;
+    color: white;
+    text-decoration: none;
+    font-size: 50px;
+}
+
+#barre-de-recherche{
+    margin-left: 10em;
+    position: absolute;
+    top: 1em;
+    
+}
+
+#loupe-de-recherche{
+    width: 5%;
+    vertical-align: middle;
+}
+
+#zone-de-recherche{
+    width: 30em;
+    height: 3em;
+}
+
+#connexion{
+    position: absolute;
+    top: 1em;
+    right: 1em;
+}
+
+#fil-ariane{
+    background-color: #4062BB;
+    padding: 3em 0em;
+    left: 0%;
+    width: 30%;
+}
+
+#fil-ariane li{
+    display: inline;
+    padding: 0em 3em;
+}
+
+#fil-ariane-historique{
+    color: #f4f4f9;
+    
+}
+
+.div-principal{
+    margin: auto;
+    width: 70%;
+    padding: 2em;
+}
+
+.titre-div-principal{
+    font-weight: bold;
+}
+
+.h2-principaux{
+    text-align: center;
+}
+
+#categorie{
+    text-align: center;
+    font-weight: bold;
+    padding: 3em 0em;
+    left: 0%;
+    width: 20%;
+    background-color: #fdc758;
 }
