--- a/css/style.css
+++ b/css/style.css
@@ -182,39 +182,39 @@ margin-top: 5%;
     width: 80vw;
 }
 
-.card {
+/* .card {
   width: 300px;
   height: 400px;
-  border-radius: 40px;
+  border-radius: 40px; */
   /* margin: 0 1vw 3vh 1vw; */
-  flex: 1 0 auto;
-    margin-left: 2%;
+  /* flex: 1 0 auto;
+    margin-left: 2%; */
     /* scroll-snap-align: start; */
-        position: relative;
+        /* position: relative; */
         
-}
-.card:hover .card-background {
+/* } */
+/* .card:hover .card-background {
     transform: scale(1.02) translateZ(0);
-  }
+  } */
   
   
   .cards:hover > .card:not(:hover) .card-background {
     filter: brightness(0.7) saturate(0) contrast(1.2) blur(5px);
   }
 
-    .card-background {
+    /* .card-background {
         background-size: cover;
         background-position: center;
         border-radius: 12px;
         filter: brightness(0.7) saturate(1.5) contrast(0.9); /* A MODIFIER!!!!!! */ 
-        position: absolute; /* image de fond prend toute la place de la cards (avec les 4 lignes du dessous)*/
-        left: 0;
+        /* position: absolute; image de fond prend toute la place de la cards (avec les 4 lignes du dessous) */
+        /* left: 0;
         right: 0;
         top: 0;
         bottom: 0;
         transform-origin: center;
         transition: .2s;
-      }
+      }  */
 
 ::-webkit-scrollbar {
     width: 100px;
@@ -233,12 +233,12 @@ margin-top: 5%;
         background-color: black;
   }
 
-.card .ville {
+/* .card .ville {
     position: relative;
   padding: 3vh 0 0 1vw;
   color: white;
   z-index: 5;
-}
+} */
 
 .card:hover .ville {
   color: white;
@@ -337,16 +337,16 @@ justify-content: space-between;
     width: 100vw;
 }
 
-h1{
+/* h1{
     font: 36px "Open Sans";
     padding-top: 5vh;
     padding-bottom: 5vh;
     display: flex;
     justify-self: center;
     align-self:center;
-}
+} */
 
-#searchBarre{
+/* #searchBarre{
     display: flex;
     top: 2%;
     justify-content: flex-end;
@@ -356,28 +356,26 @@ h1{
     width: 20vw;
     height: 5vh;
     border-radius: 50px;
-}
+} */
 
-#searchBarre p{
+/* #searchBarre p{
     padding-right: 35%;
     color: #f4f4f9;
-}
+} */
 
-#research{
+/* #research{
     right: 0;
     width: 3vw;
     height: 5vh;
     border-radius: 0px 50px 50px 0px;
     border: 2px solid #f4f4f9;
-}
+} */
 
-
-
-.positionPresentation{
+/* .positionPresentation{
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
 
 #boxinfo{
       width: 60vw;
@@ -444,30 +442,6 @@ hr{
     color: #f4f4f9;
 }
 
-#maCarte{
-    border-radius: 30px;
-position: relative;
-display: flex;
-width: 50vw;
-height: 50vh;
-margin-left: 10%;
-}
-
-
-.contenerCard{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.cards{
-    display: flex;
-    overflow-x: scroll;
-    padding: 1% 0 1% 0;
-    /* scroll-snap-type: x mandatory; */
-    width: 80vw;
-}
-
 .card {
   width: 300px;
   height: 400px;
@@ -484,9 +458,9 @@ margin-left: 10%;
   }
   
   
-  .cards:hover > .card:not(:hover) .card-background {
+  /* .cards:hover > .card:not(:hover) .card-background {
     filter: brightness(0.7) saturate(0) contrast(1.2) blur(5px);
-  }
+  } */
 
     .card-background {
         background-size: cover;
@@ -526,31 +500,31 @@ margin-left: 10%;
   z-index: 5;
 }
 
-.card:hover .ville {
+/* .card:hover .ville {
   color: white;
-}
+} */
     
-.card .monument {
+/* .card .monument {
     position: relative;
     padding: 1vh 0 0 1vw;
     color: black;
     z-index: 100;
-  }
+  } */
 
-  .card:hover .monument {
+  /* .card:hover .monument {
     color: white;
-  }
+  } */
    
-footer{
+/* footer{
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 5vh;
     height: 10vh;
     background: #4062BB;
-}
+} */
 
-#boutonCodePostal {
+/* #boutonCodePostal {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -558,16 +532,16 @@ footer{
     height: 150px;
     width: 150px;
     border-radius: 100%;
-}
+} */
 
-#boutonCodePostal p{
+/* #boutonCodePostal p{
     color: white;
-}
+} */
 
-#infoDepartement{
+/* #infoDepartement{
     margin: 0 0 0 10%;
     width: 60%;
-}
+} */
 
 #menuSecondaireHorizontal{
     display: flex;
