--- a/css/style.css
+++ b/css/style.css
@@ -377,15 +377,15 @@ justify-content: space-between;
     align-items: center;
 } */
 
-#boxinfo{
+/* #boxinfo{
       width: 60vw;
   display: flex;
   justify-content: space-around;
   flex-direction: row;
   flex-wrap: wrap;
-}
+} */
 
-.info{
+/* .info{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -395,22 +395,22 @@ justify-content: space-between;
     background: #4062BB;
     box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.25);
     border-radius: 30px;
-}
+} */
 
-.info p{
+/* .info p{
     font: 18px "Montserrat light";
     text-align: center;
     color: white;
     font-size: 18px;
     padding: 3%;
-}
+} */
 
-hr{
+/* hr{
     border: 1px solid #4062BB;
     margin-top: 10vh;
     margin-bottom: 5vh;
     width: 80vw;
-}
+} */
 
 /* #trouverLieux{
     display: flex;
@@ -419,14 +419,14 @@ hr{
     flex-direction: column;
 } */
 
-#recherche{
+/* #recherche{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 80vw;
     margin: 5vh 0 5vh 0;
-}
-
+} */
+/* 
 #boutonRecherche{
     display: flex;
     justify-content: center;
@@ -435,12 +435,12 @@ hr{
     height: 150px;
     width: 150px;
     border-radius: 100%;
-}
+} */
 
-#boutonRecherche p{
+/* #boutonRecherche p{
     text-align: center;
     color: #f4f4f9;
-}
+} */
 
 .card {
   width: 300px;
@@ -553,9 +553,9 @@ hr{
     background: #4062BB;
 }
 
-#menuSecondaireHorizontal span{
+/* #menuSecondaireHorizontal span{
    color: white;
-} 
+}  */
 
 #div_title_lieu 
 {
