--- a/css/style.css
+++ b/css/style.css
@@ -760,8 +760,6 @@ width: 40%;
 display: flex;
 flex-direction: row;
 justify-content: space-between;
-
-
 } 
 #cracc h2 
 {
@@ -770,4 +768,13 @@ justify-content: space-between;
 #lcoin a 
 {
     color: lightgray;
+}
+#apigf
+{
+width: 50%;
+margin-left: 2%;
+}
+#apig, #apif
+{
+    
 }
