--- a/css/style.css
+++ b/css/style.css
@@ -793,3 +793,52 @@ justify-content: space-between;
 
     cursor: pointer;
 }
+
+.form_frontco_form
+{
+   
+    height: 80%;
+    margin-top: 10%;
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+   
+}  
+
+.form_frontco  input[type=email] {
+width: 100%;
+padding: 12px 20px;
+margin: 8px 0;
+box-sizing: border-box; 
+background-color: #4062BB; 
+color: #fff; 
+border: none;
+border-bottom: 2px solid #fff;
+
+} 
+
+.form_frontco  ::placeholder {
+    color: #fff;
+}
+
+.form_frontco  input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box; 
+    background-color: #4062BB; 
+    color: #fff; 
+    border: none;
+    border-bottom: 2px solid #fff;
+  } 
+
+  
+
+.form_frontco_button input[type=submit]
+{
+    width: 100%;
+    color: #fff; 
+    background-color: #52b2cf; 
+    background: linear-gradient(to right, #4062BB, #52B2CF);
+    border: none;
+}
