--- a/css/style.css
+++ b/css/style.css
@@ -814,7 +814,7 @@ width: 40%;
     background-color: #4062BB;
     width: 50%;
     flex-direction: column;
-    margin-left: -5%;
+    margin-left: -10%;
   
 }  
 #lcoin
@@ -826,13 +826,14 @@ display: flex;
 flex-direction: row;
 justify-content: space-between;
 } 
-#cracc h2 
+#cracc h4
 {
     color: #fff ;
 }
 #lcoin a 
 {
-    color: lightgray;
+    color: lightgray; 
+    font-size: medium;
 }
 #apigf
 {
