--- a/css/style.css
+++ b/css/style.css
@@ -670,9 +670,18 @@ background-repeat:no-repeat;
 margin-right: 5%;
 width: 300px;
 height: 400px;
-} 
+}  
+
+#infolocal 
+{
+    margin-left: 50px;  
+    
+}
+
+
 #maCarte1 
 {
+    margin-top: 50px;
     border-radius: 10px;
     width: 100%;
     height: 50%; 
