--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ section{
         display: flex;
         align-items: center;
         flex-direction: column;
+        padding: 5% 0 10% 0;
 }
 
 a{
@@ -85,7 +86,6 @@ p{
 #presentation{
     width: 100vw;
     background-color: #4062BB;
-    height: 80vh;
 }
 
 #presentation,#choixAPresenter h1{
@@ -158,7 +158,6 @@ p{
 
 #trouverLieux{
     width: 100vw;
-    height: 70vh;
     position: relative;
 }
 
@@ -210,7 +209,6 @@ margin-top: 5%;
 #choixAPresenter{
     width: 100vw;
     background-color: #4062BB;
-    height: 70vh;
 }
 
 .contenerCard{
@@ -371,6 +369,7 @@ justify-content: space-between;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #4062BB;
 }
 
 #presentationCarte h2{
