--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: 'Montserrat', sans-serif;
 }
 
 html{
@@ -65,9 +66,7 @@ h1{
     font-size: 2rem;
 }
 
-p{
-    font-family: 'Montserrat', sans-serif;
-}
+
 
 #searchBarre{
     margin: 0 5% 0 0;
@@ -824,13 +823,22 @@ flex-wrap: wrap;
         align-items: center;
        
     }  
+
+    .form_frontco
+    {
+       
+       width: 60%;
+       
+    }  
+    
     
     .form_frontco  input[type=email] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box; 
-    background-color: #4062BB; 
+    background-color: #4062BB;
+    font-family: 'Montserrat', sans-serif;
     color: #fff; 
     border: none;
     border-bottom: 2px solid #fff;
@@ -846,6 +854,7 @@ flex-wrap: wrap;
         padding: 12px 20px;
         margin: 8px 0;
         box-sizing: border-box; 
+        font-family: 'Montserrat', sans-serif;        
         background-color: #4062BB; 
         color: #fff; 
         border: none;
