--- a/css/style.css
+++ b/css/style.css
@@ -742,12 +742,18 @@ flex-wrap: wrap;
     width: 50px;
     height: 50px;
     margin: 10px;
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+        
     } 
+
     #arrow svg 
     {
-        color: #4062BB;
-    } 
+        width: 75%;
+        height: 75%;
+    }
+
     #peopleandcracc 
     {
         width: 90vw;
