--- a/css/style.css
+++ b/css/style.css
@@ -953,40 +953,28 @@ img.leaflet-interactive{
 
 
 
-#menu_gestion_admin 
+#gestion_admin 
 {
-    height: 100%; 
+    height: 100vh; 
     width: 20%; 
     margin-left: 0px;
     background-color: #4062BB; 
     display: flex;  
-    flex-direction: column;
-} 
-#menu_gestion_admin p
-{
-    color: #fff;  
-    margin-left: 5px; 
-    margin-top: 5%;
+    flex-direction: column;  
+    justify-content: space-around;
+    
+}  
 
+.menu_gestion_admin
+{
+    
+    
+    height: auto; 
+   
+  
 }
-#menu_gestion_admin ul
-{
-    margin-top: 10%; 
-    margin-bottom: 10%; 
-    margin-left: 15px; 
-    list-style: none;
-} 
-#menu_gestion_admin ul li 
-{
-    margin-top: 5%; 
-    color: #fff; 
-} 
 
-#menu_gestion_admin ul li:hover
+.menu_gestion_admin a 
 {
-    text-decoration: underline;
-    /* background-color: #fdc758; */
-    /* transform-origin: right bottom;
-    transform: scaleX(0);
-    transition: transform 0.4s linear; */
+    margin-top: 10px;
 }
