--- a/css/style.css
+++ b/css/style.css
@@ -961,20 +961,20 @@ img.leaflet-interactive{
     background-color: #4062BB; 
     display: flex;  
     flex-direction: column;  
-    justify-content: space-around;
+    
     
 }  
 
-.menu_gestion_admin
+
+#admindep, #admin, #membre
 {
-    
-    
-    height: auto; 
-   
-  
+display: flex; 
+flex-direction: column;
+margin-top: 5%;
+}  
+#admindep span, #admin span, #membre span
+{
+    margin-left: 5px; 
+    color: #fff;
 }
 
-.menu_gestion_admin a 
-{
-    margin-top: 10px;
-}
