--- a/css/style.css
+++ b/css/style.css
@@ -1041,7 +1041,53 @@ margin-top: 5%;
 
   #depot_photo 
   {
-      margin-top: -50%;
+      margin-top: -50%; 
+      margin-left: 20%;
+      /* height: 50vh; */
       display: flex; 
       justify-content: center; 
+  } 
+  #depot_photo form 
+  {
+      width: 75%;
+      height: 50%; 
+      background-color: #fdc758;  
+      border-radius: 20px; 
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  } 
+  #depot_photo form p 
+  {
+      width: 100%;
+      height: 100%; 
+      text-align: center;
+  line-height: 170px;
+  color: #ffffff;
+  } 
+  #depot_photo form input 
+  {
+    width: 100%;
+    height: 100%;  
+    cursor: pointer;  
+    background-color: #4062BB; 
+    border-radius: 2px;
+  } 
+  #depot_photo form button 
+  {
+      cursor: pointer;
+  }
+  #dep-phot button 
+  {
+      border-style: none;
+      background-color: #4062BB;
+      color: #fff; 
+      width: 100%;
+      height: 35px;
+      margin-top: -20px;
+
+      border-radius: 4px;
+      border-bottom: 4px solid #fff;
+      transition: all .2s ease;
+      outline: none;
   }
