--- a/css/style.css
+++ b/css/style.css
@@ -209,53 +209,6 @@ height: 60vh;
     background-color: #4062BB;
 }
 
-.contenerCard{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.cards{
-    display: flex;
-    overflow-x: scroll;
-    padding: 1% 0 1% 0;
-    /* scroll-snap-type: x mandatory; */
-}
-
-.card {
-  width: 300px;
-  height: 400px;
-  border-radius: 40px;
-  /* margin: 0 1vw 3vh 1vw; */
-  flex: 1 0 auto;
-    margin-left: 2%;
-    /* scroll-snap-align: start; */
-        position: relative;
-        
-}
-.card:hover .card-background {
-    transform: scale(1.02) translateZ(0);
-  }
-  
-  
-  .cards:hover > .card:not(:hover) .card-background {
-    filter: brightness(0.7) saturate(0) contrast(1.2) blur(5px);
-  }
-
-    .card-background {
-        background-size: cover;
-        background-position: center;
-        border-radius: 12px;
-        filter: brightness(0.7) saturate(1.5) contrast(0.9); /* A MODIFIER!!!!!! */ 
-        position: absolute; /* image de fond prend toute la place de la cards (avec les 4 lignes du dessous)*/
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        transform-origin: center;
-        transition: .2s;
-      }
-
 ::-webkit-scrollbar {
     /* width: 20px; */
         background-color: #4062BB;
@@ -271,28 +224,6 @@ height: 60vh;
 
   ::-webkit-scrollbar-corner {
         background-color: #1a181b;
-  }
-
-.card .ville {
-    position: relative;
-  padding: 3vh 0 0 1vw;
-  color: #e9f0f1;
-  z-index: 5;
-}
-
-.card:hover .ville {
-  color: #e9f0f1;
-}
-    
-.card .monument {
-    position: relative;
-    padding: 1vh 0 0 1vw;
-    color: #1a181b;
-    z-index: 100;
-  }
-
-  .card:hover .monument {
-    color: #e9f0f1;
   }
    
 footer{
@@ -393,77 +324,6 @@ width: 40vw;
 height: 50vh;
 margin-left: 10%;
 } */
-
-
-.contenerCard{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 80vw;
-}
-
-.cards{
-    display: flex;
-    overflow-x: scroll;
-    padding: 1% 0 1% 0;
-    /* scroll-snap-type: x mandatory; */
-}
-
-.card {
-  width: 300px;
-  height: 400px;
-  border-radius: 40px;
-  /* margin: 0 1vw 3vh 1vw; */
-  flex: 1 0 auto;
-    margin-left: 2%;
-    /* scroll-snap-align: start; */
-        position: relative;
-        
-}
-.card:hover .card-background {
-    transform: scale(1.02) translateZ(0);
-  }
-  
-  
-  .cards:hover > .card:not(:hover) .card-background {
-    filter: brightness(0.7) saturate(0) contrast(1.2) blur(5px);
-  }
-
-    .card-background {
-        background-size: cover;
-        background-position: center;
-        border-radius: 12px;
-        filter: brightness(0.7) saturate(1.5) contrast(0.9); /* A MODIFIER!!!!!! */ 
-        position: absolute; /* image de fond prend toute la place de la cards (avec les 4 lignes du dessous)*/
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        transform-origin: center;
-        transition: .2s;
-      }
-
-.card .ville {
-    position: relative;
-  padding: 3vh 0 0 1vw;
-  color: #e9f0f1;
-  z-index: 5;
-}
-
-.card:hover .ville {
-  color: #e9f0f1;
-}
-    
-.card .monument {
-    position: relative;
-    padding: 1vh 0 0 1vw;
-    color: #1a181b;
-    z-index: 100;
-  }
-
-  .card:hover .monument {
-    color: #e9f0f1;
-  }
    
 #fleche{
     position: relative;
@@ -1144,11 +1004,10 @@ margin-top: 5%;
   }
 
 #codePostale{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 5vh;
+    justify-items: center;
 }
 
 #codePostale a{
@@ -1163,19 +1022,15 @@ margin-top: 5%;
  }
 
 #codePostale div{
+    display: grid;
     border-collapse: collapse;
     border: solid #4062BB 2px;
     display: flex;
     flex-direction: column;
     width: 40vw;
     height: 30vh;
-    margin-bottom: 5%;
     padding: 2%;
     overflow: auto;
- }
-
- #codePostale div:nth-child(odd){
-    margin-right: 0vw;
  }
 
  #codePostale div h2{
@@ -1195,7 +1050,7 @@ margin-top: 5%;
     background-color: #4062BB;
 }
 
-/*Reset sur les éléments de la liste*/
+
 #fil-ariane ul {
     display: flex;
 list-style-type:none;
@@ -1218,7 +1073,37 @@ padding: 1vh 2vw 1vh 2vw;
   color: white;
   margin: 0 1vw 0 1vw ;
     }	
+
+    #trier{
+        width: fit-content;
+        margin-bottom: 2vh;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        position: relative;
+        left: 5vw;
+        top: 2vh;
+        background-color: #4062BB;
+        color: #f4f4f9;
+        padding: 0 2vw 0 2vw;
+    }
+
+    #trier p{
+        margin-right: 1vw;
+        width: max-content;
+        display: flex;
+    }
+
+    #trier svg{
+        margin: 1vh 1vw 1vh 1vw;
+        display: flex;
+    }
  
+    #trier svg line{
+        display: flex;
+        stroke: #fdc758;
+    }
+
  @media(max-width: 585px){
 
         #apparitionMenu{
@@ -1326,3 +1211,74 @@ padding: 1vh 2vw 1vh 2vw;
         transform: translateY(0px)rotate(-45deg);
     }
   }
+  @import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
+
+.cards{
+    width: 80vw;
+    display: flex;
+    overflow-x: scroll;
+    padding: 1% 0 1% 0;
+    /* scroll-snap-type: x mandatory; */
+}
+
+.card {
+    margin-right: 2vw;
+  display: flex;
+  flex: 1 0 300px;
+  position: relative;
+  overflow: hidden;
+  height: 400px;
+  width: 100%;
+  color: white;
+  background-color: #000000;
+}
+.card * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+}
+.card img {
+  max-width: 100%;
+}
+.card div {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
+    opacity: 0.7;
+    background-color: #4062BB;
+    width: 50%;
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+    align-content: flex-end;
+    flex-wrap: wrap;
+}
+
+.card h3,
+.card p {
+  -webkit-transform: translateX(-2vw);
+  transform: translateX(-2vh);
+  margin: 0;
+}
+
+.card p {
+  font-size: 0.8em;
+}
+
+.card:hover img{
+  opacity: 0.6;
+}
+.card:hover:after,
+.card.hover:after,
+.card:hover div {
+    
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+  opacity: 0.9  ;
+}
