debut de fin slider leo

--- a/css/style.css
+++ b/css/style.css
@@ -801,18 +801,28 @@ flex-wrap: wrap;
       /* margin-left: 30vw;
       margin-right: 30vw; 
   } */
-  .card_leo img 
+  .img-slider-fond,  .img-slider-fond1
   {
       width: 100%; 
       height: 70%; 
-      border-radius: 20px 20px 0px 0px;
-  } 
+      border-radius: 20px 20px 0px 0px; 
+      background-image: url("../images/batiment-avec-fond/avoir/colombier.jpg");
+      background-repeat: no-repeat;  
+      background-size: cover;
+
+  }  
+
+
+  .img-slider-fond1
+  {
+    background-image: url("../images/batiment-avec-fond/avoir/chateau.jpg");
+  }
   .info_card_leo 
   {
       
       width: 100%; 
       display: flex; 
-      /* justify-content: space-evenly;*/
+      justify-content: space-evenly;
       flex-direction: row; 
       ;
   } 
@@ -820,9 +830,10 @@ flex-wrap: wrap;
   {
       background-color: #4062BB; 
       width: 10px;
-      border-radius: 100%;
+      border-radius: 50%; 
+      
   }
-  .card_leo :nth-of-type(2)
+  .card_leo :nth-of-type(3)
   {
     display: flex;
     justify-content: center; 
