--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,11 @@ a:hover{
     font-size: 1.5rem;
     color: #f4f4f9;
 }
-
+@media screen and (max-width: 500px) {
+    #logoTypo{ 
+        font-size: 1em;
+    }
+}
 header img{
     width: 100vw;
     display: flex;
@@ -199,8 +203,19 @@ margin-left: 10%;
     border-radius: 30px;
 position: relative;
 display: flex;
-width: 40vw;
-height: 60vh;
+width: 65vw;
+height: 65vh;
+} 
+@media screen and (max-width: 1100px) { 
+
+    #maCarteDepartement{ 
+        width: 80vw;
+height: 70vh;
+
+    }
+
+
+
 }
 
 #choixAPresenter{
@@ -700,6 +715,7 @@ flex-wrap: wrap;
 #txt-card p 
 {
     width: 50%;
+    color:#fff; 
 }
 
 #carte-ville 
